# krypton

./: --version  .gitattributes  .gitignore  .gitmodules  .ll  AGENT_L_LINUX_INSTALL.md  CHANGELOG.md  CMakeLists.txt  GC_SELFHOST_PLAN.md  HANDOFF_WASM_DROP_BUG.md  InstallationLog.txt  LICENSE  LINUX_RELEASE_TODO.md  LOWBIT_TAGGING_PLAN.md  M1_SETUP.md  Makefile  NOTICE  OVERNIGHT_REPORT.md  README.md  RELEASE_NOTES_1.4.0.md  RELEASE_NOTES_1.5.0.md  SELFHOST_MACOS.md  SOCKETS_CROSS_BACKEND_PLAN.md  Spec.md  Spec.md.bak  WINDOWS_HANDOFF.md  _codex_choc_wrap.k  _codex_choc_wrap_window_only.ks  _codex_objkwin_min.ks  _opt_build.c  bootstrap.bat  build.sh  build_llvm.bat  build_v060.bat  build_v072.bat  build_v075.bat  build_v077.bat  build_v085.bat  build_v097.bat  build_v098.bat  (+76 more)
.claude/: settings.local.json
algorithms/: bfs.k  binary_search.k  bubble_sort.k  coin_change.k  combinations.k  dfs.k  dijkstra.k  edit_distance.k  fibonacci_dp.k  gcd_lcm.k  huffman_freq.k  insertion_sort.k  kmp.k  knapsack_01.k  linked_list.k  longest_common_subseq.k  matrix_ops.k  max_subarray.k  merge_sort.k  n_queens.k  permutations.k  power_set.k  quicksort.k  run_length_encoding.k  selection_sort.k  sieve.k  stack_eval.k  string_matching.k  topological_sort.k  tower_of_hanoi.k  two_sum.k  union_find.k
archive/: features_self.c  hello.c  hello_self.c  run_bootstrap.c
assets/: krypton.rc
bootstrap/: REBUILD_SEED.md  elf_host_linux_aarch64  elf_host_linux_x86_64  kcc_driver_linux_aarch64  kcc_driver_linux_x86_64  kcc_driver_macos_aarch64  kcc_seed.c  kcc_seed_linux_aarch64  kcc_seed_linux_x86_64  kcc_seed_macos_aarch64  macho_host_macos_aarch64  optimize_host_linux_x86_64  sanitize_ir.py
compiler/: compile.k  main.cpp  optimize.k  run.k  snek.k  value.hpp
docs/: BUG-trycatch-macho.md  HANDOFF_LINUX_SELFHOST.md  HANDOFF_M1.md  HANDOFF_MACOS_2.1.md  HANDOFF_MACOS_2026_05_23.md  KSML_DEMO_INTEGRATION.md  LAUNCH_POSTS.md  RELEASE_2.1.1.md  WASM_HOST_ABI.md  WASM_PHASE_1_SPLIT.md  backend_history.md  cocoa_design.md  course_outline.md  gc_user_guide.md  gui.md  handoff_archive_summary.md  imports.md  kcss_design.md  krypton-vault.md  krypton_gui_tiers.md  macos_gc_port_plan.md  macos_lsp_port_plan.md  memory_vs_c.md  port_1to2.md  python_compat.md  python_to_kir.md  quickref_2_0.md  roadmap.md  snek.md  v20_mark_sweep_design.md  v20_plan.md  wasm_backend_design.md  web_router_design.md
examples/: admin.k  all_features.expected  all_features.kp  anagram_check.k  arch_info.k  bench_closures.k  binary_convert.k  bmi_calculator.k  boxed_text.k  bracket_check.k  caesar_cipher.k  caesar_decode.k  calculator.k  chaining.expected  chaining.kp  classes.expected  classes.kp  cocoa_hello.ks  collatz.k  count_tokens.k  countdown.k  csv_extract.k  dashboard.k  day_planner.k  debug_args.k  debug_compile.k  debug_direct.k  debug_pair.k  debug_read.k  debug_tiny.k  demo.expected  demo.kp  diamond_pattern.k  dicts.expected  dicts.kp  digit_sum.k  factorial.k  features_test.k  fibonacci.k  fizzbuzz.k  (+114 more)
extensions/: krypton-language-1.1.0.vsix  krypton-language-1.4.0.vsix  krypton-language-1.5.0.vsix  krypton-language-1.8.0.vsix  krypton-language-1.8.1.vsix  krypton-language-1.8.2.vsix  krypton-language-1.8.4.vsix  krypton-language-2.0.0.vsix  krypton-language-2.2.0.vsix  krypton-language-2.3.0.vsix
grammar/: krypton.ebnf
handoffs/: AGENT_W_GREENFIELD.md  arm64_codegen_drop.md  (+71 more)
(+777 files in other folders)
